--- a/_config.yml
+++ b/_config.yml
@@ -19,18 +19,20 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Testing Universe by Himani
-email: your-email@example.com
+email: himani110@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Testing Universe is an exciting venture that delves deep into the realm of testing. 
+  With the mission is to capture innovative ideas surrounding testing approaches, strategies, and automation frameworks.
+  Idea to strive to explore and uncover various concepts within the testing domain, pushing the boundaries of what's possible. 
+  Join Me on this journey of discovery and embrace new ideas and chart a course towards enhanced testing excellence.
+
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://himani110.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+
+github_username:  himani110
 
 # Build settings
-theme: minima
+theme: gem
 plugins:
   - jekyll-feed
 
