--- a/_config.yml
+++ b/_config.yml
@@ -32,9 +32,19 @@ url: "https://himani110.github.io" # the base hostname & protocol for your site,
 github_username:  himani110
 
 # Build settings
-theme: gem
+theme: minima
 plugins:
   - jekyll-feed
+
+collections:
+    API Testing :
+      Manual Testing
+      Automation 
+      Non-Functional
+    Automation Framework
+  - CI/CD Tools
+  - Strategies
+  - Test planning & Management
 
 # Exclude from processing.
 # The following items will not be processed, by default.
