--- a/_config.yml
+++ b/_config.yml
@@ -32,9 +32,11 @@ url: "https://himani110.github.io" # the base hostname & protocol for your site,
 github_username:  himani110
 
 # Build settings
-theme: minima
+#theme: minima
+remote_theme: pages-themes/architect@v0.2.0
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 
 # Exclude from processing.
